jumping website in mobile view solved

--- a/css/styles.css
+++ b/css/styles.css
@@ -3297,6 +3297,7 @@ img.u-pull-left {
     .intro-content .text-huge-title {
         padding-right: 0;
         margin-bottom: var(--vspace-1_5);
+        min-height: 5em;
     }
 
     .intro-social {
